src/css/hero.css
.hero-section .container .row {
  position: relative;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;

  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  flex-direction: column;
  gap: 8px;

  border-radius: 24px;
  padding: 32px 20px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-image: url('../img/hero/hero-mob.png');
  @media (min-resolution: 192dpi) {
    background-image: url('../img/hero/hero-mob@2x.png');
  }
}

.hero-title {
  font-family: 'Cormorant', sans-serif;
  font-weight: 500;
  font-size: 40px;
  line-height: 1.2;
  letter-spacing: -0.01em;
  color: #fff;
  margin-bottom: 24px;
}

.hero-description {
  font-family: 'Mulish', sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 1.5;
  color: #fff;
  margin-bottom: 32px;
}

.hero-section .btn-primary {
  border: 1px solid #fff;
  border-radius: 6px;
  padding: 10px 24px;
  width: 100%;
  height: 44px;
  background: #fff;
  font-family: 'Mulish', sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  color: #000;
}

@media screen and (min-width: 768px) {
  .hero-section .container .row {
    padding: 122px 32px 32px 32px;
    width: auto;

    background-image: url('../img/hero/hero-tab.png');
    @media (min-resolution: 192dpi) {
      background-image: url('../img/hero/hero-tab@2x.png');
    }
  }
  .hero-section .btn-primary {
    background: #dcc110;
    border: 1px solid #dcc110;
    width: 161px;
  }
}

@media screen and (min-width: 1440px) {
  .hero-section .container .row {
    padding: 458px 32px 32px 64px;

    background-image: url('../img/hero/hero-d.png');
    @media (min-resolution: 192dpi) {
      background-image: url('../img/hero/hero-d@2x.png');
    }
  }
  .hero-section .btn-primary {
    position: absolute;
    right: 64px;
    bottom: 32px;
  }
}

